--- a/ch02-jpa-start1/pom.xml
+++ b/ch02-jpa-start1/pom.xml
@@ -39,6 +39,15 @@
 			<version>21.5.0.0</version>
 		</dependency>
 
+
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.24</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
