--- a/ch11-jpa-shop/pom.xml
+++ b/ch11-jpa-shop/pom.xml
@@ -14,7 +14,7 @@
     <properties>
 
         <!-- 기본 설정 -->
-        <java.version>1.6</java.version>
+        <java.version>11</java.version>
         <!-- 프로젝트 코드 인코딩 설정 -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -25,7 +25,6 @@
         <hibernate.version>4.3.10.Final</hibernate.version>
         <!-- 데이터베이스 버전 -->
         <tomcat-jdbc.version>7.0.57</tomcat-jdbc.version>
-        <h2db.version>1.4.187</h2db.version>
         <!-- JSP, WEB 버전 -->
         <jsp.version>2.2</jsp.version>
         <jstl.version>1.2</jstl.version>
@@ -61,13 +60,12 @@
             <version>${hibernate.version}</version>
         </dependency>
 
-        <!-- H2 데이터베이스 -->
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>${h2db.version}</version>
-            <scope>runtime</scope>
-        </dependency>
+		<!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc8 -->
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<version>21.5.0.0</version>
+		</dependency>
 
         <!-- 커넥션 풀 -->
         <dependency>
