--- a/ch12-springdata-shop/pom.xml
+++ b/ch12-springdata-shop/pom.xml
@@ -13,7 +13,7 @@
 	<properties>
 
 		<!-- 기본 설정 -->
-		<java.version>1.6</java.version>
+		<java.version>11</java.version>
 		<!-- 프로젝트 코드 인코딩 설정 -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -57,7 +57,6 @@
 			<groupId>com.mysema.querydsl</groupId>
 			<artifactId>querydsl-apt</artifactId>
 			<version>${querydsl.version}</version>
-			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -80,12 +79,11 @@
 			<version>${hibernate.version}</version>
 		</dependency>
 
-		<!-- H2 데이터베이스 -->
+		<!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc8 -->
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<version>${h2db.version}</version>
-			<scope>runtime</scope>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<version>21.5.0.0</version>
 		</dependency>
 
 		<!-- 커넥션 풀 -->
